[package]
name = "art"
version = "0.1.0"
authors = ["R4chel"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'HtmlButtonElement',
  'EventListener',
  'HtmlParagraphElement',
  'HtmlInputElement'
]